--- a/webbanhang/styles/dd.css
+++ b/webbanhang/styles/dd.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 /* CSS Document */
+
 *{
 	padding:0;
 	margin:0;
@@ -100,4 +101,8 @@
 	width:100%;
 	height:80px;
 	border:1px solid #000;
+}
+.searchform {
+	margin-top: 5px;
+	float:right;
 }
