--- a/webbanhang/styles/dd.css
+++ b/webbanhang/styles/dd.css
@@ -5,10 +5,13 @@
 	padding:0;
 	margin:0;
 }
+html{
+background:#f3f3f3 ;
+}
 .wrapper{
 	width:1000px;
 	height:auto;
-	border:1px solid #000;
+	border:0px solid #000;
 	margin:auto;
 }
 .tieude{
@@ -24,12 +27,13 @@
 .header {
 	width:100%;
 	height:250px;
-	border:1px solid #000;
+	border:0px solid #000;
 }
 .menu {
+	background:#9F0;
 	width:100%;
 	height:30px;
-	border:1px solid #000;
+	border:0px solid #000;
 }
 .menu ul{
 	width:100%;
@@ -37,16 +41,17 @@
 	list-style:none;
 }
 .menu ul li {
+	font-size:20px;
 	float:left;
 	line-height:30px;
 	margin-left:20px;
 }
 .menu ul li a{
-	color:#000;
+	color:#F0F;
 	text-decoration:none;	
 }
 .menu a hover{
-	background:#9F0;
+	color:#F00;
 }
 .content{
 	width:100%;
@@ -56,7 +61,7 @@
 .left{
 	width:28%;
 	height:auto;
-	border:1px solid #D9D9D9;
+	border:0px solid #D9D9D9;
 	float:left;
 	margin-top:2px;
 }
@@ -66,24 +71,45 @@
 	list-style:none;
 }
 .danhsachsanpham ul li{
+	font-size:20px;
 	width:auto;
 	height:20px;
 	padding-left:10px;
 	padding-top:5px;
-	background:#F2F2F2;
+	
 }
 .danhsachsanpham ul li a{
 	text-decoration:none;
-	color:#000;
+	color:#F00;
 	display:block;
 }
 .danhsachsanpham a:hover{
 	background:#9F0;
 }
+.hangbanchay li{
+	width:100%;
+	height:auto;
+	border-bottom:1px dashed #30C;
+	margin:auto;
+	
+}
+.hangbanchay li:hover{
+	background:#C40C42;
+	
+}
+.hangbanchay a{
+	text-decoration:none;
+	display:block;
+}
+.hangbanchay p{
+	padding:5px;
+	color:skyblue;
+	font-weight:bold;
+}
 .right{
 	width:71%;
 	height:auto;
-	border:1px solid #D9D9D9;
+	border:0px solid #D9D9D9;
 	float:right;
 	margin-top:2px;
 }
@@ -104,13 +130,29 @@
 .sanphamall ul li a{
 	text-decoration:none;
 }
+.hinhanh ul{
+	list-style:none;
+	width:98%;
+	height:auto;
+	margin:auto;
+}
+.hinhanh ul li{
+	width:217px;
+	height:auto;
+	text-align:center;
+	padding-top:20px;
+	float:left;
+	margin:5px;
+}
 .clr {
 	clear:both;
 }
 .footer {
-	width:100%;
+	width:1000px;
+	margin:auto;
 	height:80px;
-	border:1px solid #000;
+	background:#9F0;
+	border:0px solid #000;
 }
 .searchform {
 	margin-top: 5px;
