--- a/webbanhang/styles/dd.css
+++ b/webbanhang/styles/dd.css
@@ -13,15 +13,16 @@ background:#f3f3f3 ;
 	height:auto;
 	border:0px solid #000;
 	margin:auto;
+	
 }
 .tieude{
 	width:auto;
 	height:40px;
-	background:#9F0;
+	background:#e3e3e3;
 	font-size:20px;
 	text-align:center;
 	padding:5px;
-	color:#F00;
+	color:#000;
 	line-height:40px;
 }
 .header {
@@ -30,7 +31,7 @@ background:#f3f3f3 ;
 	border:0px solid #000;
 }
 .menu {
-	background:#9F0;
+	background:#e3e3e3;
 	width:100%;
 	height:30px;
 	border:0px solid #000;
@@ -47,7 +48,7 @@ background:#f3f3f3 ;
 	margin-left:20px;
 }
 .menu ul li a{
-	color:#F0F;
+	color:#000;
 	text-decoration:none;	
 }
 .menu a hover{
@@ -151,7 +152,7 @@ background:#f3f3f3 ;
 	width:1000px;
 	margin:auto;
 	height:80px;
-	background:#9F0;
+	background:#e3e3e3;
 	border:0px solid #000;
 }
 .searchform {
